--- a/playbook.yml
+++ b/playbook.yml
@@ -33,6 +33,9 @@
         - name: Usando o stow
           shell:
             cmd: "cd /home/{{ ansible_user_id }}/dotfiles && stow ."
+          when: not ("/home/{{ ansible_user_id }}/.tmux.conf" is file and
+            "/home/{{ ansible_user_id }}/.vimrc" is file and
+            "/home/{{ ansible_user_id }}/.zshrc" is file)
 
     # Bloco relacionado ao pugin do tmux
     - block:
@@ -59,6 +62,32 @@
           user:
             name: "{{ ansible_user_id }}"
             shell: /bin/zsh
+
+    # Bloco relacionado a customizacao do oh-my-Zsh
+    - block:
+        - debug:
+            msg: "O valor de ZSH_CUSTOM é: {{ ansible_user_id }}/.oh-my-zsh"
+        - name: Instalado o tema spaceship
+          git:
+            repo: https://github.com/spaceship-prompt/spaceship-prompt.git
+            depth: 1
+            dest: "/home/{{ ansible_user_id }}/.oh-my-zsh/themes/spaceship-prompt"
+
+        - name:
+          file:
+            src: "/home/{{ ansible_user_id }}/.oh-my-zsh/themes/spaceship-prompt/spaceship.zsh-theme"
+            dest: "/home/{{ ansible_user_id }}/.oh-my-zsh/themes/spaceship.zsh-theme"
+            state: link
+
+        - name:
+          git:
+            repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
+            dest: "/home/{{ ansible_user_id }}/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting"
+
+        - name:
+          git:
+            repo: https://github.com/zsh-users/zsh-autosuggestions
+            dest: "/home/{{ ansible_user_id }}/.oh-my-zsh/custom/plugins/zsh-autosuggestions"
 
     # Bloco relacionado ao VsCode
     - block:
